fix back to top btn

--- a/catalog.html
+++ b/catalog.html
@@ -73,12 +73,11 @@
 
 
 
-<button id="backToTop" class="bx--btn bx--btn--primary" type="button" 
-  style="position: fixed; bottom: 24px; right: 24px; z-index: 9999; display: none; border-radius: 50%; width: 48px; height: 48px; padding: 0; min-height: 48px;">
-  <svg focusable="false" preserveAspectRatio="xMidYMid meet"
+<button id="backToTop" class="bx--btn bx--btn--primary" type="button" style="position: fixed; bottom: 24px; right: 24px; z-index: 9999; display: none; border-radius: 50%; width: 48px; height: 48px; padding: 0; min-height: 48px;">
+  <svg style="margin:auto;" focusable="false" preserveAspectRatio="xMidYMid meet"
       xmlns="http://www.w3.org/2000/svg" fill="currentColor"
       width="20" height="20" viewBox="0 0 32 32" aria-hidden="true">
-    <path d="M16,6l-8,8l1.4141,1.4141L15,9.8281V26h2V9.8281l5.5859,5.5859L24,14Z"/>
+    <path d="M16 14L6 24 7.4 25.4 16 16.8 24.6 25.4 26 24zM4 8H28V10H4z"/>
   </svg>
 </button>
 
