added positioning and reviewed counter

--- a/create.html
+++ b/create.html
@@ -272,6 +272,7 @@
             <option>align-top</option>
             <option>align-top-clear</option>
             <option>align-top-clearer</option>
+            <option>align-top-clearest</option>
         </select>
         </label>
 
