add item in list modes

--- a/create.html
+++ b/create.html
@@ -187,6 +187,12 @@
                     </svg>
                     Reviewing
                 </li>
+                <li style="cursor:pointer;" data-value="template">
+                    <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
+                        <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
+                    </svg>
+                    Template
+                </li>
                 <li style="cursor:pointer;" data-value="public">
                     <svg focusable="false" xmlns="http://www.w3.org/2000/svg" fill="black" width="12" height="12" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                         <path d="M28 6H30V26H28zM17 6L15.57 7.393 23.15 15 2 15 2 17 23.15 17 15.57 24.573 17 26 27 16 17 6z" stroke="currentColor" stroke-width="2" stroke-linecap="round"/>
