--- a/create.html
+++ b/create.html
@@ -337,6 +337,10 @@
                 <option value="half-shift-inverted">5pm->11pm</option>
                 <option value="quarter">1am->10am</option>
                 <option value="tenToTwo">10am->2pm</option>
+                <option value="twelveToSix">12am->6pm</option>
+                <option value="tenToEight">10am->8pm</option>
+                <option value="sevenToEleven">7pm->11pm</option>
+                <option value="oneToFive">1pm->5pm</option>
             </select>
         </label>
 
