--- a/create.html
+++ b/create.html
@@ -338,8 +338,8 @@
                 <option value="quarter">1am->10am</option>
                 <option value="tenToTwo">10am->2pm</option>
                 <option value="twelveToSix">12am->6pm</option>
-                <option value="elevenToSeven">11am->7am</option>
-                <option value="sevenToEleven">7am->11am</option>
+                <option value="elevenToSeven">11am<-7am</option>
+                <option value="elevenToNineteen">11am->7pm</option>
                 <option value="oneToFive">1pm->5pm</option>
             </select>
         </label>
