--- a/create.html
+++ b/create.html
@@ -341,6 +341,7 @@
                 <option value="elevenToSeven">11am<-7am</option>
                 <option value="elevenToNineteen">11am->7pm</option>
                 <option value="oneToFive">1pm->5pm</option>
+                <option value="oneToTenClock">1pm->10pm</option>
             </select>
         </label>
 
