--- a/create.html
+++ b/create.html
@@ -342,6 +342,7 @@
                 <option value="elevenToNineteen">11am->7pm</option>
                 <option value="oneToFive">1pm->5pm</option>
                 <option value="oneToTenClock">1pm->10pm</option>
+                <option value="oneToElevenClock">1pm->11pm</option>
             </select>
         </label>
 
