test section index

--- a/index.html
+++ b/index.html
@@ -89,6 +89,65 @@
     </div>
   </section>
 
+
+  <section style="margin:5rem auto; max-width:800px; text-align:center;">
+  <h2 style="font-size:2rem; margin-bottom:2rem;">Why Sign Up for Free?</h2>
+
+  <table class="bx--data-table bx--data-table--zebra" style="width:100%; text-align:center;">
+    <thead>
+      <tr>
+        <th scope="col">Feature</th>
+        <th scope="col">Guest</th>
+        <th scope="col">Free PedalPlex Account (Plexer)</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr>
+        <td>Pedalboards Saved</td>
+        <td>
+          <span style="color:#da1e28;">&#10060;</span> 1 local
+        </td>
+        <td>
+          <span style="color:#24a148;">&#10003;</span> Unlimited
+        </td>
+      </tr>
+      <tr>
+        <td>Presets Created</td>
+        <td>
+          <span style="color:#da1e28;">&#10060;</span> 1 preset (not saved)
+        </td>
+        <td>
+          <span style="color:#24a148;">&#10003;</span> Unlimited, fully saved
+        </td>
+      </tr>
+      <tr>
+        <td>Access Across Devices</td>
+        <td>
+          <span style="color:#da1e28;">&#10060;</span> Local only
+        </td>
+        <td>
+          <span style="color:#24a148;">&#10003;</span> Sync across devices
+        </td>
+      </tr>
+      <tr>
+        <td>Future Features</td>
+        <td>
+          <span style="color:#da1e28;">&#10060;</span> Limited
+        </td>
+        <td>
+          <span style="color:#24a148;">&#10003;</span> All upcoming free features
+        </td>
+      </tr>
+    </tbody>
+  </table>
+
+  <div style="margin-top:2rem;">
+    <a href="register" class="bx--btn bx--btn--primary" style="margin-right:1rem;">Sign Up Free</a>
+    <a href="catalog" class="bx--btn bx--btn--secondary">Continue as Guest</a>
+  </div>
+</section>
+
+
   <!-- Footer -->
   <footer id="footer" style="margin-top:4rem; text-align:center; padding:1rem; font-size:0.875rem; color:#aaa;">
     © <span id="year-range"></span> PedalPlex · 
