--- a/index.html
+++ b/index.html
@@ -90,52 +90,52 @@
   </section>
 
 
-  <section style="margin:5rem auto; max-width:800px; text-align:center;">
-  <h2 style="font-size:2rem; margin-bottom:2rem;">Why Sign Up for Free?</h2>
+<section style="margin:5rem auto; max-width:800px; text-align:center;">
+  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why Sign Up for Free?</h2>
 
-  <table class="bx--data-table bx--data-table--zebra" style="width:100%; text-align:center;">
-    <thead>
+  <table class="bx--data-table bx--data-table--zebra" style="width:100%; text-align:center; background-color:#3a3a3a; color:#fff; border-radius:8px; overflow:hidden;">
+    <thead style="background-color:#2e2e2e; color:#fff;">
       <tr>
-        <th scope="col">Feature</th>
-        <th scope="col">Guest</th>
-        <th scope="col">Free PedalPlex Account (Plexer)</th>
+        <th scope="col" style="padding:12px;">Feature</th>
+        <th scope="col" style="padding:12px;">Guest</th>
+        <th scope="col" style="padding:12px;">Free PedalPlex Account (Plexer)</th>
       </tr>
     </thead>
     <tbody>
-      <tr>
-        <td>Pedalboards Saved</td>
-        <td>
-          <span style="color:#da1e28;">&#10060;</span> 1 local
+      <tr style="border-top:1px solid #555;">
+        <td style="padding:12px;">Pedalboards Saved</td>
+        <td style="padding:12px;">
+          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 local
         </td>
-        <td>
-          <span style="color:#24a148;">&#10003;</span> Unlimited
-        </td>
-      </tr>
-      <tr>
-        <td>Presets Created</td>
-        <td>
-          <span style="color:#da1e28;">&#10060;</span> 1 preset (not saved)
-        </td>
-        <td>
-          <span style="color:#24a148;">&#10003;</span> Unlimited, fully saved
+        <td style="padding:12px;">
+          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited
         </td>
       </tr>
-      <tr>
-        <td>Access Across Devices</td>
-        <td>
-          <span style="color:#da1e28;">&#10060;</span> Local only
+      <tr style="border-top:1px solid #555;">
+        <td style="padding:12px;">Presets Created</td>
+        <td style="padding:12px;">
+          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 preset (not saved)
         </td>
-        <td>
-          <span style="color:#24a148;">&#10003;</span> Sync across devices
+        <td style="padding:12px;">
+          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited, fully saved
         </td>
       </tr>
-      <tr>
-        <td>Future Features</td>
-        <td>
-          <span style="color:#da1e28;">&#10060;</span> Limited
+      <tr style="border-top:1px solid #555;">
+        <td style="padding:12px;">Access Across Devices</td>
+        <td style="padding:12px;">
+          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Local only
         </td>
-        <td>
-          <span style="color:#24a148;">&#10003;</span> All upcoming free features
+        <td style="padding:12px;">
+          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Sync across devices
+        </td>
+      </tr>
+      <tr style="border-top:1px solid #555;">
+        <td style="padding:12px;">Future Features</td>
+        <td style="padding:12px;">
+          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Limited
+        </td>
+        <td style="padding:12px;">
+          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> All upcoming free features
         </td>
       </tr>
     </tbody>
@@ -146,6 +146,7 @@
     <a href="catalog" class="bx--btn bx--btn--secondary">Continue as Guest</a>
   </div>
 </section>
+
 
 
   <!-- Footer -->
