--- a/index.html
+++ b/index.html
@@ -90,62 +90,67 @@
   </section>
 
 
+
+  
 <section style="margin:5rem auto; max-width:800px; text-align:center;">
   <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why Sign Up for Free?</h2>
 
-  <table class="bx--data-table bx--data-table--zebra" style="width:100%; text-align:center; background-color:#3a3a3a; color:#fff; border-radius:8px; overflow:hidden;">
-    <thead style="background-color:#2e2e2e; color:#fff;">
-      <tr>
-        <th scope="col" style="padding:12px;">Feature</th>
-        <th scope="col" style="padding:12px;">Guest</th>
-        <th scope="col" style="padding:12px;">Free PedalPlex Account (Plexer)</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr style="border-top:1px solid #555;">
-        <td style="padding:12px;">Pedalboards Saved</td>
-        <td style="padding:12px;">
-          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 local
-        </td>
-        <td style="padding:12px;">
-          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited
-        </td>
-      </tr>
-      <tr style="border-top:1px solid #555;">
-        <td style="padding:12px;">Presets Created</td>
-        <td style="padding:12px;">
-          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 preset (not saved)
-        </td>
-        <td style="padding:12px;">
-          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited, fully saved
-        </td>
-      </tr>
-      <tr style="border-top:1px solid #555;">
-        <td style="padding:12px;">Access Across Devices</td>
-        <td style="padding:12px;">
-          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Local only
-        </td>
-        <td style="padding:12px;">
-          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Sync across devices
-        </td>
-      </tr>
-      <tr style="border-top:1px solid #555;">
-        <td style="padding:12px;">Future Features</td>
-        <td style="padding:12px;">
-          <span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Limited
-        </td>
-        <td style="padding:12px;">
-          <span style="color:#24a148; font-size:1.2rem;">&#10003;</span> All upcoming free features
-        </td>
-      </tr>
-    </tbody>
-  </table>
+  <!-- Glow border container -->
+  <div style="
+    border-radius: 12px;
+    padding: 2px; /* thickness of glow */
+    background: linear-gradient(45deg, rgb(70, 41, 100), rgb(156, 84, 213), rgb(94, 226, 240));
+    box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4);
+  ">
+    <!-- Actual table -->
+    <table class="bx--data-table bx--data-table--zebra" style="
+      width:100%; 
+      text-align:center; 
+      background-color:#3a3a3a; 
+      color:#fff; 
+      border-radius:10px; 
+      overflow:hidden;
+    ">
+      <thead style="background-color:#2e2e2e; color:#fff;">
+        <tr>
+          <th scope="col" style="padding:12px;">Feature</th>
+          <th scope="col" style="padding:12px;">Guest</th>
+          <th scope="col" style="padding:12px;">Free PedalPlex Account (Plexer)</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Pedalboards Saved</td>
+          <td style="padding:12px;"><span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 local</td>
+          <td style="padding:12px;"><span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited</td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Presets Created</td>
+          <td style="padding:12px;"><span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> 1 preset (not saved)</td>
+          <td style="padding:12px;"><span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Unlimited, fully saved</td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Access Across Devices</td>
+          <td style="padding:12px;"><span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Local only</td>
+          <td style="padding:12px;"><span style="color:#24a148; font-size:1.2rem;">&#10003;</span> Sync across devices</td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Future Features</td>
+          <td style="padding:12px;"><span style="color:#da1e28; font-size:1.2rem;">&#10060;</span> Limited</td>
+          <td style="padding:12px;"><span style="color:#24a148; font-size:1.2rem;">&#10003;</span> All upcoming free features</td>
+        </tr>
+      </tbody>
+    </table>
+  </div>
 
   <div style="margin-top:2rem;">
     <a href="register" class="bx--btn bx--btn--primary" style="margin-right:1rem;">Sign Up Free</a>
     <a href="catalog" class="bx--btn bx--btn--secondary">Continue as Guest</a>
   </div>
 </section>
+
+
+
 
 
 
