--- a/index.html
+++ b/index.html
@@ -93,7 +93,7 @@
 
   
 <section style="margin:5rem auto; max-width:800px; text-align:center;">
-  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why Sign Up for Free?</h2>
+  <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why becoming a PedalPlexer?</h2>
 
   <!-- Glow border container -->
   <div style="
@@ -115,24 +115,29 @@
         <tr>
           <th scope="col" style="padding:12px;">Feature</th>
           <th scope="col" style="padding:12px;">Guest</th>
-          <th scope="col" style="padding:12px;">Free PedalPlex Account (Plexer)</th>
+          <th scope="col" style="padding:12px;">Free PedalPlex Account</th>
         </tr>
       </thead>
       <tbody>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Pedalboards Saved</td>
           <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> 1 local</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited, cloud saved</td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Presets Created</td>
           <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> 1 preset (not saved)</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited, fully saved</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited, cloud saved</td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Access Across Devices</td>
           <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Local only</td>
           <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Sync across devices</td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Gears Catalog</td>
+          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Complete</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Complete + Add custom gears</td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Future Features</td>
