--- a/index.html
+++ b/index.html
@@ -115,34 +115,39 @@
         <tr>
           <th scope="col" style="padding:12px;">Feature</th>
           <th scope="col" style="padding:12px;">Guest</th>
-          <th scope="col" style="padding:12px;">Free PedalPlex Account</th>
+          <th scope="col" style="padding:12px;">Free Account</th>
         </tr>
       </thead>
       <tbody>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Pedalboards Saved</td>
-          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> 1 local</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited, cloud saved</td>
+          <td style="padding:12px;">Pedalboards Saves</td>
+          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Up to 1 (local)</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited (cloud saved)</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Presets Created</td>
-          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> 1 preset (not saved)</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited, cloud saved</td>
+          <td style="padding:12px;">Presets Saves</td>
+          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Up to 1 (view only)</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited (cloud saved)</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Access Across Devices</td>
+          <td style="padding:12px;">Cross-device Access</td>
           <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Local only</td>
           <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Sync across devices</td>
         </tr>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Gears Catalog</td>
-          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Complete</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Complete + Add custom gears</td>
+          <td style="padding:12px;">Public Gears Catalog</td>
+          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> All public Gears</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> All public Gears</td>
+        </tr>
+        <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Custom Gears Catalog</td>
+          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Limited</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Add custom gears, create personall catalog, contribute</td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Future Features</td>
           <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Limited</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> All upcoming free features</td>
+          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> All upcoming features</td>
         </tr>
       </tbody>
     </table>
