--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@
       <tbody>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Pedalboards Saves</td>
-          <td style="padding:12px;"><span style="color:rgb(156, 84, 213); font-size:1.2rem;">&#10060;</span> Up to 1 (local)</td>
-          <td style="padding:12px;"><span style="color:rgb(94, 226, 240); font-size:1.2rem;">&#10003;</span> Unlimited (cloud saved)</td>
+          <td style="padding:12px;"><svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"><path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path><title>Circle outline</title></svg> Up to 1 (local)</td>
+          <td style="padding:12px;"><svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg"><circle cx="16" cy="16" r="14"></circle><title>Circle solid</title></svg> Unlimited (cloud saved)</td>
         </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Presets Saves</td>
