--- a/index.html
+++ b/index.html
@@ -120,27 +120,6 @@
       </thead>
       <tbody>
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Pedalboards</td>
-          <td style="padding:12px;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
-            </svg> 1 (local save)</td>
-          <td style="padding:12px;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <circle cx="16" cy="16" r="14"></circle>
-            </svg> Unlimited (cloud save)</td>
-        </tr>
-        <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Presets</td>
-          <td style="padding:12px;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> 1 (view only)</td>
-          <td style="padding:12px;">
-            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <circle cx="16" cy="16" r="14"></circle>
-            </svg> Unlimited (cloud save)</td>
-        </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Cross-device sync</td>
           <td style="padding:12px;">
@@ -152,29 +131,49 @@
               <circle cx="16" cy="16" r="14"></circle>
             </svg> Complete (cloud sync)</td>
         </tr>
+          <tr style="border-top:1px solid #555;">
+          <td style="padding:12px;">Presets</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+              <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
+            </svg> 1 (view only)</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+              <circle cx="16" cy="16" r="14"></circle>
+            </svg> Unlimited (cloud save)</td>
+        </tr>
+          <td style="padding:12px;">Pedalboards</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+              <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
+            </svg> 1 (local save)</td>
+          <td style="padding:12px;">
+            <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
+              <circle cx="16" cy="16" r="14"></circle>
+            </svg> Unlimited (cloud save)</td>
+        </tr>
         <tr style="border-top:1px solid #555;">
           <td style="padding:12px;">Gears catalog</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
+              <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
             </svg> Limited (public gears only)</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
             </svg> Advanced (public, private and custom gears)</td>
-        </tr>
+        </tr>     
         <tr style="border-top:1px solid #555;">
-          <td style="padding:12px;">Gears catalog contributions</td>
+          <td style="padding:12px;">Future features</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
-              <path stroke-width="0" d="m16,2c-7.732,0-14,6.268-14,14s6.268,14,14,14,14-6.268,14-14S23.732,2,16,2Zm0,26c-6.6274,0-12-5.3726-12-12s5.3726-12,12-12,12,5.3726,12,12-5.3726,12-12,12Z"></path>
-            </svg> No</td>
+              <path d="M29.37,11.84a13.6,13.6,0,0,0-1.06-2.51A14.17,14.17,0,0,0,25.9,6.1a14,14,0,1,0,0,19.8,14.17,14.17,0,0,0,2.41-3.23,13.6,13.6,0,0,0,1.06-2.51,14,14,0,0,0,0-8.32ZM4,16A12,12,0,0,1,16,4V28A12,12,0,0,1,4,16Z"></path>
+            </svg> Limited</td>
           <td style="padding:12px;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="22" height="22" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg" style="vertical-align: bottom;">
               <circle cx="16" cy="16" r="14"></circle>
-            </svg> Complete</td>
-        </tr>
-        
+            </svg> All upcoming features</td>
+        </tr>      
       </tbody>
     </table>
   </div>
