--- a/index.html
+++ b/index.html
@@ -100,7 +100,8 @@
     border-radius: 12px;
     padding: 10px; /* thickness of glow */
     background: linear-gradient(45deg, rgb(70, 41, 100), rgb(156, 84, 213), rgb(94, 226, 240));
-    box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4);
+    /* box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4); */
+    box-shadow: 0 0 15px rgba(70, 41, 100, 0.6), 0 0 25px rgba(156, 84, 213, 1);
   ">
     <!-- Actual table -->
     <table class="bx--data-table bx--data-table--zebra" style="
@@ -179,8 +180,8 @@
   </div>
 
   <div style="margin-top:2rem;">
-    <a href="register" class="bx--btn bx--btn--primary" style="margin-right:1rem;">Sign Up Free</a>
     <a href="catalog" class="bx--btn bx--btn--secondary">Continue as Guest</a>
+    <a href="register" class="bx--btn bx--btn--primary" style="margin-right:1rem;">Sign Up for Free</a>
   </div>
 </section>
 
