--- a/index.html
+++ b/index.html
@@ -96,13 +96,13 @@
   <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why becoming a PedalPlexer?</h2>
 
   <!-- Glow border container -->
-  <div style="
+  <!-- <div style="
     border-radius: 12px;
     padding: 10px; /* thickness of glow */
     background: linear-gradient(45deg, rgb(70, 41, 100), rgb(156, 84, 213), rgb(94, 226, 240));
-    /* box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4); */
-    box-shadow: 0 0 15px rgba(70, 41, 100, 0.6), 0 0 25px rgba(156, 84, 213, 1);
-  ">
+    box-shadow: 0 0 15px rgba(94, 226, 240, 0.6), 0 0 25px rgba(156, 84, 213, 0.4);
+  "> -->
+  <div class="pedalplex-glow">
     <!-- Actual table -->
     <table class="bx--data-table bx--data-table--zebra" style="
       width:100%; 
