--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 
     <!-- CTA buttons -->
     <div style="margin-top:2rem; display:flex; justify-content:center; gap:1rem; flex-wrap:wrap;">
-        <a href="pedalboard" class="bx--btn bx--btn--primary" type="button" aria-label="Start as Guest"
+        <a href="pedalboard" class="bx--btn bx--btn--secondary" type="button" aria-label="Start as Guest"
             style="display: flex; align-items: center; gap: 0.5rem;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                 <path d="M6.34 19H17.65V21H6.34z" transform="rotate(-45 11.995 20.002)"></path><path d="M17,30a1,1,0,0,1-.37-.07,1,1,0,0,1-.62-.79l-1-7,2-.28.75,5.27L21,24.52V17a1,1,0,0,1,.29-.71l4.07-4.07A8.94,8.94,0,0,0,28,5.86V4H26.14a8.94,8.94,0,0,0-6.36,2.64l-4.07,4.07A1,1,0,0,1,15,11H7.48L4.87,14.26l5.27.75-.28,2-7-1a1,1,0,0,1-.79-.62,1,1,0,0,1,.15-1l4-5A1,1,0,0,1,7,9h7.59l3.77-3.78A10.92,10.92,0,0,1,26.14,2H28a2,2,0,0,1,2,2V5.86a10.92,10.92,0,0,1-3.22,7.78L23,17.41V25a1,1,0,0,1-.38.78l-5,4A1,1,0,0,1,17,30Z"></path>            </svg>
@@ -47,13 +47,16 @@
             </svg>
             PedalPlexer Login
         </a>
-        <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
+        <a href="#why-registering" class="cds-ghost-button" aria-label="Vai alla sezione di aiuto">
+          <span class="cds-icon">?</span>
+        </a>
+        <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
             style="display: flex; align-items: center; gap: 0.5rem;">
             <svg focusable="false" preserveAspectRatio="xMidYMid meet xmlns="http://www.w3.org/2000/svg" fill="currentColor" width="16" height="16" viewBox="0 0 32 32" aria-hidden="true" class="bx--btn__icon">
                 <path d="M22 26H10a2 2 0 01-2-2V8a2 2 0 012-2H22a2 2 0 012 2V24A2 2 0 0122 26zM10 8V24H22V8zM4 24H0V22H4V10H0V8H4a2 2 0 012 2V22A2 2 0 014 24zM32 24H28a2 2 0 01-2-2V10a2 2 0 012-2h4v2H28V22h4z"/>
             </svg>
             Browse Gears
-        </a>
+        </a> -->
     </div>
   </main>
 
@@ -100,7 +103,7 @@
 
 
   
-<section style="margin:5rem auto; max-width:800px; text-align:center;">
+<section id="why-registering" style="margin:5rem auto; max-width:800px; text-align:center;">
   <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why becoming a PedalPlexer?</h2>
 
   <!-- Glow border container -->
