--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
             </svg>
             PedalPlexer Login
         </a>
-        <a href="#why-registering" class="cds-ghost-button" aria-label="Vai alla sezione di aiuto">
+        <a href="#why-registering" class="bx--btn bx--btn--ghost" aria-label="Vai alla sezione di aiuto">
           <span class="cds-icon">?</span>
         </a>
         <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
