--- a/index.html
+++ b/index.html
@@ -45,10 +45,10 @@
                 <path d="M26,30H14a2,2,0,0,1-2-2V25h2v3H26V4H14V7H12V4a2,2,0,0,1,2-2H26a2,2,0,0,1,2,2V28A2,2,0,0,1,26,30Z"/>
                 <path d="M14.59 20.59L18.17 17 4 17 4 15 18.17 15 14.59 11.41 16 10 22 16 16 22 14.59 20.59z"/>
             </svg>
-            PedalPlexer Login
+            Login
         </a>
-        <a href="#why-registering" class="bx--btn bx--btn--ghost" aria-label="Vai alla sezione di aiuto">
-          <span class="cds-icon">?</span>
+        <a href="#why-becoming a pedalplexer" aria-label="Why becoming a PedalPlexer?">
+          Why registering?
         </a>
         <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
             style="display: flex; align-items: center; gap: 0.5rem;">
