--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
             </svg>
             Login
         </a>
-        <a href="#why-becoming a pedalplexer" aria-label="Why becoming a PedalPlexer?">
-          Why registering?
+        <a href="#why-becoming-a-pedalplexer" class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only" aria-label="Why becoming a PedalPlexer?">
+          <span class="cds-icon">?</span>
         </a>
         <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
             style="display: flex; align-items: center; gap: 0.5rem;">
@@ -103,7 +103,7 @@
 
 
   
-<section id="why-registering" style="margin:5rem auto; max-width:800px; text-align:center;">
+<section id="why-becoming-a-pedalplexer" style="margin:5rem auto; max-width:800px; text-align:center;">
   <h2 style="font-size:2rem; margin-bottom:2rem; color:#fff;">Why becoming a PedalPlexer?</h2>
 
   <!-- Glow border container -->
