--- a/index.html
+++ b/index.html
@@ -47,8 +47,11 @@
             </svg>
             Login
         </a>
-        <a href="#why-becoming-a-pedalplexer" class="bx--btn bx--btn--sm bx--btn--secondary bx--btn--icon-only" aria-label="Why becoming a PedalPlexer?">
-          <span class="cds-icon">?</span>
+        <a href="#why-becoming-a-pedalplexer" aria-label="Why becoming a PedalPlexer?">
+          <svg focusable="false" preserveAspectRatio="xMidYMid meet" fill="currentColor" width="32" height="32" viewBox="0 0 32 32" aria-hidden="true" xmlns="http://www.w3.org/2000/svg">
+            <path d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"></path><circle cx="16" cy="23.5" r="1.5"></circle><path d="M17,8H15.5A4.49,4.49,0,0,0,11,12.5V13h2v-.5A2.5,2.5,0,0,1,15.5,10H17a2.5,2.5,0,0,1,0,5H15v4.5h2V17a4.5,4.5,0,0,0,0-9Z"></path>
+            <title>Help</title>
+          </svg>
         </a>
         <!-- <a href="catalog" class="bx--btn bx--btn--secondary" type="button" aria-label="Browse Gears"
             style="display: flex; align-items: center; gap: 0.5rem;">
